[package]
name = "coruja-api"
version = "0.1.0"
authors = ["hbobenicio <hbobenicio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coruja = { path = "../coruja" }

log = "0.4.14"
env_logger = "0.8.3"

serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

anyhow = "1.0.40"

actix-web = "4.0.0-beta.5"
