[package]
name = "coruja-api"
version = "0.1.0"
authors = ["hbobenicio <hbobenicio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Other internal modules
coruja = { path = "../coruja" }

# Web
actix-web = "4.0.0-beta.5"

# This version needs to be aligned with the version of mime that actix-web uses, because we interact with their mime
# values from its API.
mime = "0.3.16"

# Logging
log = "0.4.14"
env_logger = "0.8.3"

# Serialization
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

# Error handling
anyhow = "1.0.40"
