[package]
name = "coruja"
version = "0.1.0"
authors = ["hbobenicio <hbobenicio@gmail.com>"]
edition = "2018"
description = "A library for performing tls checkings and x509 certificates utilities"
homepage = "https://github.com/hbobenicio/coruja"
repository = "https://github.com/hbobenicio/coruja"
# license = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"

# This may not be so performant, but it's good enough for now
env_logger = "0.8.3"

# Error Handling
anyhow = "1.0.40"

# These needs to be aligned with actix-web tokio version
tokio = { version = "1.4.0", features = ["full"] }
tokio-openssl = "0.6.1"

# If the vendored Cargo feature is enabled, the openssl-src crate will be used to compile and statically link to a copy of OpenSSL.
# The build process requires a C compiler, perl, and make. The OpenSSL version will generally track the newest OpenSSL release,
# and changes to the version are not considered breaking changes.
# The vendored copy will not be configured to automatically find the system’s root certificates,
# but the openssl-probe crate can be used to do that instead.
openssl = { version = "0.10.60", features = ["vendored"] }
openssl-probe = "0.1.4"

